styles: fix issues with overlapping/broken stuff WPB 4660

--- a/src/style/components/group-video-grid.less
+++ b/src/style/components/group-video-grid.less
@@ -23,6 +23,11 @@
   height: 100%;
 }
 
+.tile-wrapper {
+  position: absolute;
+  top: 0;
+}
+
 .group-video {
   position: relative;
   width: 100%;
